--- a/Claims2.App/_Imports.razor
+++ b/Claims2.App/_Imports.razor
@@ -8,3 +8,9 @@
 @using Microsoft.JSInterop
 @using Claims2.App
 @using Claims2.App.Shared
+@using MudBlazor
+@using Claims2.App.Pages.Components
+@using Claims2.DataLayer.Models
+@using Claims2.App.Data
+@using Claims2.ServiceLayer
+
