--- a/Claims2.App/App.razor
+++ b/Claims2.App/App.razor
@@ -5,9 +5,12 @@
     </Found>
     <NotFound>
         <PageTitle>Not found</PageTitle>
+        <CascadingAuthenticationState>
         <LayoutView Layout="@typeof(MainLayout)">
             <p role="alert">Sorry, there's nothing at this address.</p>
         </LayoutView>
+
+        </CascadingAuthenticationState>
     </NotFound>
 </Router>
 <MudThemeProvider/>
