--- a/Claims2.App/Shared/NavMenu.razor
+++ b/Claims2.App/Shared/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿<MudNavMenu>
+﻿@inject UserService User
+<MudNavMenu>
     <MudNavLink Href="/" Match="NavLinkMatch.All">Dashboard</MudNavLink>
     <MudNavLink Href="/servers" Match="NavLinkMatch.Prefix">Servers</MudNavLink>
     <MudNavGroup Title="Settings" Expanded="true">
